<resources>
    <string name="app_name">CharPair</string>

    <string name="select_date_time">Select Date &amp; Time</string>


    <string name="are_you_new_user_register_here">Are you new user? <font color='#DD3333'><u>Register here</u></font></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <!--AIzaSyBRxYpvucj8CGaCxwNan74BS4L8tMWbqDU-->
    <!--AIzaSyCzpjdPkjjNLlDh-LA-w1QAgRr63_PHzCg-->
    <string name="maps_api_key">AIzaSyA7SV33I2sYhbd9SiUo9b75qpGOS9ZNT5I</string>
    <!--  <string name="facebook_app_id">2727968734109669</string>-->
    <!--    <string name="fb_login_protocol_scheme">fb2727968734109669</string>-->
<!--    <string name="facebook_application_id">107209941848607</string>-->

    <string name="msg_token_fmt" translatable="false">FCM registration Token: %s</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="upcoming">Upcoming</string>
    <string name="completed">Completed</string>
    <string name="find_matches">Find Matches</string>
    <string name="matches_list">Matches List</string>
    <string name="match_found">Match Found</string>
    <string name="no_matches">No Matches</string>
    <string name="no_request_found">No Request found</string>
    <string name="my_lifts">My Lifts</string>
    <string name="point_wallet">Point Wallet</string>
    <string name="logout">Logout</string>
    <string name="chat">Chat</string>
    <string name="txt_faq">FAQ</string>
    <string name="txt_feedback">Feedback</string>
    <string name="txt_suggestion">Suggestion</string>
    <string name="my_contribution">My Contribution</string>
    <string name="help_ticket">Help &amp; Support</string>
    <string name="groups">Groups</string>
    <string name="setting">Setting</string>
    <string name="my_vehicle">My Vehicle</string>
    <string name="my_chat">My Chat</string>
    <string name="my_payments">My Payments/History</string>
    <string name="payments_package">Payments Recharge Packages</string>
    <string name="post_list">Post Lift</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="update_vehicle">Update Vehicle</string>
    <string name="four_wheeler">four_wheeler</string>
    <!--    <string name="facebook_app_id">357209435575553</string>-->
    <string name="facebook_app_id">5076583682445095</string>
    <string name="fb_login_protocol_scheme">fb602082917080957</string>
    <string name="help_us_to_server">Help us to server better! Let us know your feedback</string>
    <string name="submit">Submit</string>
    <string name="total_rides">Total Rides</string>
    <string name="as_rider">As Rider</string>
    <string name="as_a_seeker">As  Seeker</string>
    <string name="palasia_badwani_plaza">Palasia badwani palaza</string>
    <string name="call">Call</string>
    <string name="select_vehicle_category">Select vehicle category</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="resend_otp_in">"Resend OTP in "</string>
    <string name="android">android</string>
    <string name="please_select_vehicle_back_image">Please select vehicle Back Image</string>
    <string name="please_select_vehicle_rc_image">Please select vehicle RC Image</string>
    <string name="lift_id">"Lift ID: "</string>
    <string name="seat">"Seat: "</string>
    <string name="recommended_for_you">Recommended for you</string>
    <string name="start_point">Start point</string>
    <string name="end_point">End point</string>
    <string name="partnet_details">Partner Details</string>
    <string name="request">Request</string>
    <string name="time">Time</string>
    <string name="send_request">Send request</string>
    <string name="cancel_request">Cancel request</string>
    <string name="take_lift">Take Lift</string>
    <string name="offer_lift">Offer Lift</string>
    <string name="find_lift">Find Lift</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="seats">Seats</string>
    <string name="mobile">Mobile</string>
    <string name="driver_list">Lifter List</string>
    <string name="accepted">Accepted</string>
    <string name="rejected">Rejected</string>
    <string name="profile">Profile</string>
    <string name="driver_profile">Lifter Profile</string>
    <string name="ride_request">Ride request</string>
    <string name="review">Review</string>
    <string name="ticket_list">Ticket List</string>
    <string name="something_went_wrong">Some thing went wrong</string>
    <string name="subject">Subject</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="create_ticket">Create Ticket</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="please_enter_subject">Please enter subject</string>
    <string name="please_enter_category">Please enter category</string>
    <string name="please_enter_description">Please enter description</string>
    <string name="ticket_id">Ticket Id</string>
    <string name="toggle">toggle</string>
    <string name="select_option">select_option</string>
    <string name="lift_type">Lift Type</string>
    <string name="answer">Answer</string>
    <string name="question">Question</string>
    <string name="confirm">CONFIRM</string>
    <string name="number_of_seat">Number of Seat</string>
    <string name="rate_per_km">Rate per km</string>
    <string name="please_enter_rate_per_km">Please enter rate per km</string>
    <string name="start_ride">Start Ride</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="otp">OTP : </string>
    <string name="share_code">Share Code :</string>
    <string name="enter_otp">Enter Otp</string>
    <string name="enter_share_password">Enter Share Code</string>
    <string name="end_ride">End Ride</string>
    <string name="give_some_feedback">Give Some Feedback</string>
    <array name="id_proof">
        <item>Daily Availability</item>
        <item>Car Pooling</item>
        <item>Pre Schedule Lifts</item>
        <item>Next Tentative Lifts</item>
        <item>Fixed Final Lifts</item>
        <item>Monthly Tour Plan</item>
    </array>
    <string name="title_activity_get_location">GetLocationActivity</string>
    <string name="lifted_users">Lifted Users</string>
    <string name="do_you_want_to_end_ride">Do you want to end ride?</string>
    <string name="end_all_ride">END ALL RIDE</string>
    <string name="do_you_want_to_end_all_rides">Do you want to end All rides?</string>
    <string name="end_all_rides">End All Rides</string>
    <string name="designaton">Designaton</string>
    <string name="department">Department</string>
    <string name="company">Company</string>
    <string name="profile_percantage">Profile %</string>
    <string name="vehicle_percantage">Vehicle %</string>
    <string name="recharge_fuel_card">Recharge Fuel Card</string>
    <string name="request_new_card">Apply for Fuel Card</string>
    <string name="available_points">Available Points : </string>
    <string name="purchase_point">Purchase Point</string>
    <string name="redeem_point">Redeem Point</string>
    <string name="transaction">Transaction</string>
    <string name="show_location_picker">Show Location Picker</string>
    <string name="addressline1_hint">Enter Flat No / Floor / Landmark </string>
    <string name="edittext_hint">"Click here to edit address location"</string>
    <string name="terms_condition_text">"The Go Green Partner (GGP) is a campaign to promote Char Pair Mobile application &amp; reach more number of users, under which users can join this campaign by sharing their KYC as asked in GGP page of the Char Pair App &amp; register themselves.\n\nThe GGP is a common campaign under which one or more campaign for different tye of user or business partner can be registered &amp; according to their engagement in campaign or sub campaign they will get benefit of offers as monetary ( Tax &amp; GST applicable as per vendor or partner engagement) non monetary as per the campaign design.\n\nAny Campaign under GGP &amp; its benefits to user are valid with the time frame of said campaign only &amp; expires with the closer of campaign or sub campaign as planned.\n\nTo Get benefit of any slab achievement of GGP- 2 ( partner of partner ) the main partner ( Origin Partner) must have reach or achieve his own slab of like to get GGP 2 benefit of Banana slab achievement the origin partner must achieve Banana slab &amp; similar for Papaya, Mango &amp; Fruit Jam.\n\nAny decision to close the campaign or sub campaign is under the decision of market analysis &amp; sustainability of campaign by Aavi Solution Pvt Ltd. &amp; company reserves all rights regarding any decision of camping related to change in campaign design , use &amp; user benefit, partner engagement &amp; benefits.\n\nGGP- 2 campaign is restricted up to 10 (Ten) GGP- 2 Partner under or in tree of  one GGP partner or main origin partner. Payment will be done only as (A) = After Download , (B) = after Use of Pair Point by user , ( C ) = After use of refer &amp; earn Pair Point by User.\n\nOnly adult with 18+ age are eligible to be a partner or vendor &amp; for any other engagement of GGP &amp; any benefit of such campaign are subjected to KYC submission &amp; validation of documents only.\n\nThe Validity of current GGP is 6 Month From the date of Active as mention on the Campaign, Extension of campaign is subjected to usage of App 'Char Pair" &amp; its benefits to user &amp; decided by Aavi Solutions Private limited only.\n\nDetailed plan of GGP with T&amp;C will be shared to user or Partner on his whatsapp number or in mail id  &amp; after read &amp; understand with user consent he or she can work as GGP.\n\nThe tracking of tree or downloads by any user as refer &amp; earn or Go Green Partner is only trackable by the unique code of individual user which is tracked &amp; maintained by Char Pair admin panel only, No other request or claim for referred download by any user will be entertained in any condition.\n\nApplying for GGP with KYC is considered as acceptance of T&amp;C of GGP campaign."</string>
</resources>
