<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10sp">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_3"
        android:layout_marginBottom="@dimen/dp_3"
        android:fontFamily="@font/gotham_regular"
        android:padding="@dimen/dp_10"
        android:text="@string/do_you_want_to_end_ride"
        android:textSize="@dimen/_12sdp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancelBtnConfirmation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view"
        android:layout_marginTop="10sp"
        android:layout_toStartOf="@+id/view"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/cancel"
        android:textColor="@color/quantum_white_100" />


    <View
        android:id="@+id/view"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_12sdp"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/endRideBtnConfirmation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view"
        android:layout_marginTop="10sp"
        android:layout_toRightOf="@+id/view"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/end_ride"
        android:textColor="@color/quantum_white_100" />


</RelativeLayout>