<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/toolbar_back_title_layout" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@drawable/login_et_bg"
                android:fontFamily="@font/poppins_regular"
                android:gravity="start"
                android:hint="@string/email"
                android:inputType="textMultiLine"
                android:padding="@dimen/dp_10"
                android:text=""
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorText"
                android:textSize="@dimen/sp_14" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@drawable/login_et_bg"
                android:fontFamily="@font/poppins_regular"
                android:gravity="start"
                android:hint="@string/subject"
                android:inputType="textMultiLine"
                android:padding="@dimen/dp_10"
                android:text=""
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorText"
                android:textSize="@dimen/sp_14" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@drawable/login_et_bg">

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spinner_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="start"
                    android:hint="@string/category"

                    android:inputType="textMultiLine"
                    android:padding="@dimen/dp_10"
                    android:text=""
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorText"
                    android:textSize="@dimen/sp_14" />
            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_description"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_150"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@drawable/login_et_bg"
                android:fontFamily="@font/poppins_regular"
                android:gravity="start"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:padding="@dimen/dp_10"
                android:text=""
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorText"
                android:textSize="@dimen/sp_14" />


        </LinearLayout>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/sp_25"
        android:layout_marginRight="@dimen/sp_25"
        android:layout_marginBottom="@dimen/dp_15"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/gotham_medium"
        android:gravity="center"
        android:paddingLeft="@dimen/dp_40"
        android:paddingRight="@dimen/dp_40"
        android:text="@string/create_ticket"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/sp_16" />

</RelativeLayout>