<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_10"
        android:hint="@string/enter_share_password"
        android:inputType="number"
        android:maxLength="4"
        android:text=""
        android:textColorHint="@color/colorGrey" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:orientation="horizontal"
        android:weightSum="2">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_weight="1"
            android:background="@drawable/rounded_bg_green"
            android:ellipsize="end"
            android:fontFamily="@font/gotham_medium"
            android:gravity="center"
            android:padding="@dimen/dp_10"
            android:text="@string/ok"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp_16" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_weight="1"
            android:background="@drawable/rounded_bg_green"
            android:ellipsize="end"
            android:fontFamily="@font/gotham_medium"
            android:gravity="center"
            android:padding="@dimen/dp_10"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp_16" />

    </LinearLayout>
</LinearLayout>