<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp_10"
    android:elevation="@dimen/dp_5">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_10">

        <RelativeLayout
            android:id="@+id/rel_item_request"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_driver"
                android:layout_width="@dimen/dp_60"
                android:layout_height="@dimen/dp_60"
                android:layout_gravity="center"
                android:fontFamily="@font/gotham_medium"
                android:gravity="center_vertical"
                android:src="@drawable/logo_icon" />

            <LinearLayout
                android:id="@+id/linear_request"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_5"
                android:layout_toRightOf="@+id/img_driver"
                android:orientation="vertical"
                android:padding="@dimen/dp_5">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gotham_medium"
                    android:gravity="center_vertical"
                    android:text="@string/app_name"
                    android:textColor="@color/colorBlue"
                    android:textSize="@dimen/dp_18" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_seats"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:fontFamily="@font/gotham_medium"
                    android:gravity="center_vertical"
                    android:text="@string/seats"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/dp_18" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_mobile_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:fontFamily="@font/gotham_medium"
                    android:gravity="center_vertical"
                    android:text="@string/app_name"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/dp_18" />

            </LinearLayout>
        </RelativeLayout>

        <TextView
            android:visibility="gone"
            android:id="@+id/userType"
            android:textStyle="bold"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/colorBlue"
            android:textSize="@dimen/dp_18" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rel_item_request"
            android:layout_centerVertical="true">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/lbl_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/dp_10"
                android:fontFamily="@font/gotham_medium"
                android:padding="@dimen/dp_5"
                android:text="@string/accepted"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/dp_18"
                android:visibility="gone" />


            <LinearLayout
                android:id="@+id/linear_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_weight="2"
                android:orientation="horizontal"
                android:visibility="visible">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_accept"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp_2"
                    android:layout_marginEnd="@dimen/dp_5"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:fontFamily="@font/gotham_medium"
                    android:gravity="center"
                    android:padding="@dimen/dp_5"
                    android:text="@string/accept"
                    android:textAllCaps="false"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/sp_16" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_reject"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/dp_5"
                    android:layout_marginTop="@dimen/dp_2"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:fontFamily="@font/gotham_medium"
                    android:gravity="center"
                    android:padding="@dimen/dp_5"
                    android:text="@string/reject"
                    android:textAllCaps="false"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/sp_16" />
            </LinearLayout>

        </RelativeLayout>


    </RelativeLayout>
</androidx.cardview.widget.CardView>