<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/title"
        layout="@layout/toolbar_back_title_layout" />


    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/map_matching"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_200"
        android:layout_below="@+id/title"
        android:layout_marginBottom="-30dp" />

    <LinearLayout
        android:id="@+id/layout_matching"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/map_matching"
        android:background="@drawable/home_bg"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/sp_25"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginRight="@dimen/sp_25"
            android:fontFamily="@font/gotham_medium"
            android:text="@string/recommended_for_you"
            android:textAllCaps="false"
            android:textColor="@color/colorText"
            android:textSize="@dimen/sp_16" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_15"
            android:background="@drawable/rounded_bg_green"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_start_point"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/gotham_medium"
                android:gravity="center_vertical"
                android:padding="@dimen/dp_10"
                android:text="@string/start_point"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/dp_18" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_marginStart="@dimen/dp_5"
                android:layout_marginEnd="@dimen/dp_5"
                android:background="@color/colorText" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_end_point"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/gotham_medium"
                android:gravity="center_vertical"
                android:padding="@dimen/dp_10"
                android:text="@string/end_point"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/dp_18" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_matching"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_marginRight="@dimen/dp_5"
            android:layout_marginBottom="@dimen/dp_10" />


    </LinearLayout>


</RelativeLayout>